[package]
name = "hush"
version = "0.2.0"
description = "Private P2P messenger with AORP anonymous routing"
authors = ["Taior Project"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/taiorproject/Hush"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
quinn = "0.11"
rustls = "0.23"
rcgen = "0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Integración con libtaior local (sin features WASM para build nativo)
taior = { path = "../../libtaior", default-features = false, features = ["fast-mode", "mix-mode"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
